fix: text overflowing on small displays (#74)

--- a/apps/blog/src/styles/global.scss
+++ b/apps/blog/src/styles/global.scss
@@ -11,7 +11,7 @@ body,
 
     /* text */
 
-    @apply font-noto-sans text-base font-normal leading-8 antialiased;
+    @apply break-words font-noto-sans text-base font-normal leading-8 antialiased;
 
     /* color */
 
